add another row to hold blanks

--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sentence Scramble!</title>
-    <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" href="scramble.css">
   </head>
   <body>
     <script>
